fix minor bug -- Overflowing-x

--- a/style.scss
+++ b/style.scss
@@ -184,6 +184,10 @@ body {
     background: linear-gradient(30deg, #C2C2C2, #F2F2F2);
 }
 
+section {
+    overflow-x: hidden;
+}
+
 
 #welcome-sec {
     position: relative;
@@ -193,7 +197,6 @@ body {
     min-height: 100vh;
     color: var(--white);
     transition: background-position 0.1s;
-    overflow-x: hidden;
     h1 {
         position: absolute;
         font-size: 2.5rem;
